--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
     <!-- CONTACT -->
     <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>Email: yourmail@gmail.com</p>
-        <p>GitHub: github.com/yourusername</p>
-        <p>LinkedIn: linkedin.com/in/yourprofile</p>
+        <h2>Contact: 7307612221</h2>
+        <p>Email: shakib73076@gmail.com</p>
+        <p>GitHub: https://github.com/SHAKI-cell</p>
+        <p>LinkedIn: https://www.linkedin.com/in/shakib-khan-644765321/</p>
     </section>
 
     <footer>
