--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +10,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-        <div class="logo">YourName</div>
+        <div class="logo">SHAKIB KHAN</div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -23,8 +21,8 @@
 
     <!-- HERO -->
     <section class="hero">
-        <h1>Building <span>Data-Driven</span> Solutions.</h1>
-        <p>Computer Science Student · Aspiring Data Scientist · Python Enthusiast</p>
+        <h1>Hi, I'm <span>Shakib Khan</span></h1>
+        <p>Computer Science Student · Developer · Python Enthusiast</p>
         <a href="#projects" class="primary-btn">View My Work</a>
     </section>
 
@@ -32,8 +30,8 @@
     <section id="about" class="section">
         <h2>About Me</h2>
         <p>
-            I’m a Computer Science student focused on problem-solving, data analysis, and
-            building practical projects using Python and core CS fundamentals.
+            I’m a Computer Science student focused on problem-solving, data analysis,
+            and building practical projects using Python and core CS fundamentals.
             I prefer clean logic, real-world impact, and continuous improvement.
         </p>
     </section>
@@ -66,13 +64,28 @@
     <!-- CONTACT -->
     <section id="contact" class="section">
         <h2>Contact: 7307612221</h2>
-        <p>Email: shakib73076@gmail.com</p>
-        <p>GitHub: https://github.com/SHAKI-cell</p>
-        <p>LinkedIn: https://www.linkedin.com/in/shakib-khan-644765321/</p>
+
+        <p>Email:
+            <a href="mailto:shakib73076@gmail.com">
+                shakib73076@gmail.com
+            </a>
+        </p>
+
+        <p>GitHub:
+            <a href="https://github.com/SHAKI-cell" target="_blank">
+                github.com/SHAKI-cell
+            </a>
+        </p>
+
+        <p>LinkedIn:
+            <a href="https://www.linkedin.com/in/shakib-khan-644765321/" target="_blank">
+                linkedin.com/in/shakib-khan-644765321
+            </a>
+        </p>
     </section>
 
     <footer>
-        <p>© 2026 Your Name. All rights reserved.</p>
+        <p>© 2026 SHAKIB KHAN. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
