--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
             </div>
 
             <div class="project-card">
-                <h3>DSA Practice Tracker</h3>
-                <p>Structured problem-solving with arrays, linked lists, and sorting.</p>
-                <a href="#">GitHub →</a>
-            </div>
+         <h3>DSA Practice Tracker</h3>
+        <p>Structured problem-solving with arrays, linked lists, and sorting.</p>
+       <a href="https://leetcode.com/u/shakib_12/" target="_blank">
+          LeetCode →
+           </a>
+          </div>
+
 
             <div class="project-card">
                 <h3>Portfolio Website</h3>
