Add CodeForce link to index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <p>Structured problem-solving with arrays, linked lists, and sorting.</p>
        <a href="https://leetcode.com/u/shakib_12/" target="_blank">
           LeetCode →
-           </a>
+        <a href="https://codeforces.com/profile/shakib73076" target="_blank">
+            CodeForce ->
+           </a> 
           </div>
 
 
