--- a/index.html
+++ b/index.html
@@ -47,15 +47,20 @@
                 <a href="#">GitHub →</a>
             </div>
 
-            <div class="project-card">
+        <div class="project-card">
          <h3>DSA Practice Tracker</h3>
         <p>Structured problem-solving with arrays, linked lists, and sorting.</p>
-       <a href="https://leetcode.com/u/shakib_12/" target="_blank">
-          LeetCode →
-        <a href="https://codeforces.com/profile/shakib73076" target="_blank">
-            CodeForce ->
-           </a> 
-          </div>
+
+        <div class="project-links">
+             <a href="https://leetcode.com/u/shakib_12/" target="_blank">
+            LeetCode →
+            </a>
+
+           <a href="https://codeforces.com/profile/shakib73076" target="_blank">
+                Codeforces →
+               </a>
+           </div>
+       </div>
 
 
             <div class="project-card">
