--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="resume.pdf" target="_blank" class="resume-btn">Resume</a></li>
+
+            <!-- Resume link updated -->
+            <li>
+                <a href="My_Resume.pdf" target="_blank" class="resume-btn">
+                    Resume
+                </a>
+            </li>
         </ul>
     </nav>
 
@@ -30,9 +36,8 @@
     <section id="about" class="section">
         <h2>About Me</h2>
         <p>
-            I’m a Computer Science student focused on problem-solving, data analysis,
-            and building practical projects using Python and core CS fundamentals.
-            I prefer clean logic, real-world impact, and continuous improvement.
+            I’m a Computer Science student focused on problem-solving,
+            backend development, and building practical projects.
         </p>
     </section>
 
@@ -41,33 +46,25 @@
         <h2>Projects</h2>
 
         <div class="project-grid">
+
             <div class="project-card">
                 <h3>Data Analysis Dashboard</h3>
                 <p>Exploratory data analysis using Python, Pandas, and Matplotlib.</p>
                 <a href="#">GitHub →</a>
             </div>
 
-        <div class="project-card">
-         <h3>DSA Practice Tracker</h3>
-        <p>Structured problem-solving with arrays, linked lists, and sorting.</p>
-
-        <div class="project-links">
-             <a href="https://leetcode.com/u/shakib_12/" target="_blank">
-            LeetCode →
-            </a>
-
-           <a href="https://codeforces.com/profile/shakib73076" target="_blank">
-                Codeforces →
-               </a>
-           </div>
-       </div>
-
+            <!-- DSA card cleaned -->
+            <div class="project-card">
+                <h3>DSA Practice Tracker</h3>
+                <p>Structured problem-solving with arrays, linked lists, and sorting.</p>
+            </div>
 
             <div class="project-card">
                 <h3>Portfolio Website</h3>
                 <p>Hand-coded professional portfolio using HTML, CSS, and JavaScript.</p>
                 <a href="#">GitHub →</a>
             </div>
+
         </div>
     </section>
 
@@ -101,3 +98,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
