Update resume link to point to resume.pdf

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- Resume link updated -->
             <li>
-                <a href="My_Resume.pdf" target="_blank" class="resume-btn">
+                <a href="resume.pdf" target="_blank" class="resume-btn">
                     Resume
                 </a>
             </li>
